--- a/README.Rmd
+++ b/README.Rmd
@@ -25,8 +25,17 @@ The nbaR houses functions that enable easy creation of standardised graphs, plot
 You can install the development version of nbaR from [GitHub](https://github.com/) with:
 
 ```{r}
-# install.packages("devtools")
+# if (!require("devtools")) install.packages("devtools")
 #devtools::install_github("SANBI-NBA/nbaR")
+
+```
+
+You can then do a tutorial on the package using:
+
+```{r}
+#
+# if (!require("learnr")) install.packages("learnr")
+# learnr::run_tutorial("nba_package_tutorial", package = "nbaR")
 ```
 
 ## Usage
