--- a/inst/tutorials/nba_package_tutorial/nba_package_tutorial.Rmd
+++ b/inst/tutorials/nba_package_tutorial/nba_package_tutorial.Rmd
@@ -591,7 +591,7 @@ See if you can change the NBA_example_map_data to the correct format and make it
 ```
 
 ```{r nba_tbl_combex4-solution}
-thr_pro_tbl <- NBA_example_map_data 
+thr_pro_tbl <- NBA_example_map_data |>
 nba_tbl_comb(GROUP = P_EcosysType,
 THR = threat_status,
 PRO = protection_level, 
