--- a/inst/templates/scientific.qmd
+++ b/inst/templates/scientific.qmd
@@ -41,11 +41,13 @@ format:
       - default 
       - custom.scss
 language:
-  section-title-footnotes: Notes and references
+  section-title-footnotes: Notes
   section-title-citation: Recommended citation
 footnotes-hover: true
 reference-location: document
 link-external-newwindow: true
+bibliography: references.bib
+csl: annals-of-the-new-york-academy-of-sciences.csl
 callout-icon: false
 execute:
   echo: false 
@@ -113,15 +115,25 @@ etc.
 
 ## Inserting footnotes and references
 
-Use this format to insert relevant references to publications, as well as any special notes you may want to add to text. Quarto will create a section at the bottom of the page where notes and references will be listed in the order you have inserted them in the text. When adding references, make sure you follow consistent formatting. Consult the SANBI publications style guide for references. If you are citing any scientific articles, remember to include a linked DOI.
+### Footnotes
 
-Basic footnote[^1]
+Use the built-in footnotes function to add notes to your text where necessary. Use notes sparingly - mainly to clarify terms.
+
+Some text with a footnote[^1].
 
 [^1]: Insert a basic footnote by using the Visual editor's Insert \> Footnote. Type the footnote text into the box provided. Quarto will automatically number your references and footnotes in the order that they are inserted in the text.
 
-A reference to a published article[^2]
+### References
 
-[^2]: Butchart, S.H.M., et al. 2007. Improvements to the Red List Index. PLoS ONE 2(1): e140. doi: [10.1371/journal.pone.0000140](https://doi.org/10.1371/journal.pone.0000140).
+See [Quarto documentation](https://quarto.org/docs/authoring/citations.html#sec-citations) for different ways to cite references. For reference citations to work, there needs to be a .bib file stored in the same folder as the .qmd file. Give the .bib file a unique name (i.e. change it from the default references.bib). Make sure to edit the yaml header to reference the correct .bib file. See this [bibtex reference](https://www.bibtex.com/e/entry-types/) for the formats for different types of references
+
+Citing a journal article[@harris2019].
+
+Citing a book[@megadiversity1997].
+
+Citing a book chapter[@wilson2018].
+
+Citing a technical report[@vonmaltitz2020carbon].
 
 ## Code blocks for graphs, maps and tables
 
@@ -163,26 +175,26 @@ It is possible do display both the data that a figure is based on and the figure
 
 ```{r}
 #| label: fig-tab
-#| fig-cap: "Ecosystem threat status of functional ecosystem types." 
+#| fig-cap: "Ecosystem threat status of terrestrial ecosystem types." 
 
 library(dplyr)
 library(tidyr)
 library(nbaR)
 
-# dat <- read.csv("data/terrestrial-ecosystems.csv", header = TRUE)
+dat <- read.csv("data/terrestrial-ecosystems.csv", header = TRUE)
 
-# ecosystem_summary <- dat %>%
-#                       group_by(biome, threat_status) %>%
-#                       summarise(count = n()) %>%
-#                       pivot_wider(
-#                         id_cols = biome,
-#                         names_from = threat_status,
-#                         values_from = count
-#                       ) %>%
-#                       mutate(across(where(is.numeric), ~replace_na(.x,0))) %>% ungroup()
+ecosystem_summary <- dat %>% 
+                      group_by(biome, threat_status) %>% 
+                      summarise(count = n()) %>% 
+                      pivot_wider(
+                        id_cols = biome,
+                        names_from = threat_status,
+                        values_from = count
+                      ) %>% 
+                      mutate(across(where(is.numeric), ~replace_na(.x,0))) %>% ungroup()
 
-nba_plot(NBA_example_thr_data,
-         `OVERALL types`,
+nba_plot(ecosystem_summary,
+         biome,
          2:5,
          CHRT = "bar",
          NUM = FALSE,
@@ -201,19 +213,17 @@ nba_plot(NBA_example_thr_data,
 #| tbl-cap: "Ecosystem threat status of terrestrial ecosystem types." 
 #| classes: plain
 
+library(dplyr)
+library(nbaR)
 library(gt)
-# source("gt_theme_nba.R")
 
-# tbl_dat <- dat %>%
-#             select(ecosystem, biome, threat_status) %>%
-#             arrange(biome, ecosystem)
-# 
-# colnames(tbl_dat) <- c("Ecosystem", "Biome", "Threat status")
-# 
-# gt(tbl_dat) %>% gt_theme_nba()
+tbl_dat <- dat %>% 
+            select(ecosystem, biome, threat_status) %>% 
+            arrange(biome, ecosystem)
 
-gt(NBA_example_pro_data) %>% 
-  nba_tbl_theme()
+colnames(tbl_dat) <- c("Ecosystem", "Biome", "Threat status")
+
+gt(tbl_dat) %>% nba_tbl_theme()
 
 ```
 :::
@@ -244,3 +254,8 @@ The last section of your page should contain links to technical documentation of
 **Other publications**
 
 Jordaan, M.S., et al. 2020. Protected areas and endemic freshwater fishes of the Cape Fold Ecoregion: missing the boat for fish conservation? Frontiers in Environmental Science 8:502042. doi: [10.3389/fenvs.2020.502042](https://doi.org/10.3389/fenvs.2020.502042)
+
+## References
+
+::: {#refs}
+:::
