--- a/vignettes/nbaR.Rmd
+++ b/vignettes/nbaR.Rmd
@@ -184,9 +184,9 @@ tbl
 library(dplyr)
 library(tidyr)
 
-tbl <- NBA_example_pro_data %>% 
-  pivot_longer(2:5, names_to = "protection_level") %>% 
-  nba_tbl_colr(COL = protection_level)
+tbl <- NBA_example_pro_data %>%
+ pivot_longer(2:5, names_to = "protection_level") %>%
+ nba_tbl_colr(COL = protection_level, HEADER = "Coast")
 
 tbl
 ```
@@ -236,8 +236,9 @@ Please note this was modeled after the maps in the marine technical report 2018.
 
 map <- nba_map(DF = NBA_example_map_data,
                GEOM = geometry, 
-               CAP = "Figure 1. A map of the protection level of marine pelagic ecosystem types in South Africa", 
-               FILL = protection_level)
+               FILL = protection_level, 
+               LEGEND = TRUE, 
+               MOE = TRUE)
 
 map
 ```
